--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -8,10 +8,33 @@
  {% load static %}
       <link rel="icon" type="image/x-icon" href="{% static 'favicon.ico' %}">
 
-    <link rel="stylesheet" type="text/css" href="{% static 'stylesheet.css' %}">    <meta charset="UTF-8">
-    <title>{% trans "Login" %}</title>
+    <link rel="stylesheet" type="text/css" href="{% static 'new_styling.css' %}">
+    <meta charset="UTF-8">
+    <title>{% trans "Sign-in" %}</title>
 </head>
-<body style="    background-color: #D8EFD3;">
+<body>
+
+<div id="login-container">
+    <div class="form-container">
+  <form id="login-form" method="post" action="{% url 'login' %}">
+              <h1>{% trans "Sign-in" %}</h1>
+
+    {% csrf_token %}
+    {% for field in form %}
+      {{ field }}
+      {% endfor %}
+
+    <input type="submit" value="{% trans "login"%}">
+    <input type="hidden" name="next" value="{{ next }}">
+  <a id="forgot-password" href="{% url 'password_reset' %}">{% trans "Lost password?"%}</a>
+
+  </form>
+</div>
+<div>
+    <img style="width: 100%;height: 100%" src="{% static "img/login-background.jpg"%}">
+
+</div>
+</div>
 
 
   {% if form.errors %}
@@ -31,36 +54,6 @@
       </div>
   {% endif %}
 
-<div class="container" style="margin-top:50px">
-  <form method="post" action="{% url 'login' %}">
-    {% csrf_token %}
-    <table>
-      <tr>
-        <td>{% trans "Name" %}:</td>
-        <td>{{ form.username }}</td>
-      </tr>
-      <tr>
-        <td>{{ form.password.label_tag }}</td>
-        <td>{{ form.password }}</td>
-      </tr>
-    </table>
-    <input type="submit" value="{% trans "login"%}">
-    <input type="hidden" name="next" value="{{ next }}">
-  </form>
 
-  {# Assumes you set up the password_reset view in your URLconf #}
-
-</div>
-  <p
-          style="
-          font-size: x-small;
-          position: absolute;
-          bottom: 0;
-          width: 100%;
-          margin: 0;
-          display: flex;
-          justify-content: center;
-
-"><a style="color:black;text-decoration: none" href="{% url 'password_reset' %}">{% trans "Lost password?"%}</a></p>
 </body>
 </html>
