--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -2,53 +2,73 @@
 <!DOCTYPE html>
 <html lang="{% trans "en" %}" dir="{% trans "ltr" %}">
 <head>
+
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
  {% load static %}
       <link rel="icon" type="image/x-icon" href="{% static 'favicon.ico' %}">
 
-    <link rel="stylesheet" type="text/css" href="{% static 'stylesheet.css' %}">    <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="{% static 'login_and_register.css' %}">
+    <meta charset="UTF-8">
     <title>{% trans "Register" %}</title>
 </head>
-<body style="    background-color: #D8EFD3;
-">
+<body>
+
+<div id="login-container">
+    <div class="register-container">
+  <form id="login-form" method="post" action="{% url 'login' %}">
+              <h1>{% trans "Register" %}</h1>
+
+    {% csrf_token %}
+
+    <div class="form-two-fields">{{ form.first_name }}{{ form.last_name }}</div>
+      {{ form.password }}
+      {{ form.phone_number }}
+       <table>
+            <tr>
+                <th>{% trans "Sunday" %}</th>
+                <th>{% trans "Monday" %}</th>
+                <th>{% trans "Tuesday" %}</th>
+                <th>{% trans "Wednesday" %}</th>
+                <th>{% trans "Thursday" %}</th>
+            </tr>
+           <tr>
+               <td>{{ form.Sunday }}</td>
+               <td>{{ form.Monday }}</td>
+               <td>{{ form.Tuesday }}</td>
+               <td>{{ form.Wednesday }}</td>
+               <td>{{ form.Thursday }}</td>
+           </tr>
+       </table>
+    <input type="submit" value="{% trans "Register"%}">
+    <input type="hidden" name="next" value="{{ next }}">
+
+  </form>
+</div>
+<div>
+    <img style="width: 100%;height: 100%" src="{% static "img/register-image.jpg"%}">
+
+</div>
+</div>
 
 
   {% if form.errors %}
       <div class="alert">
-    <p>{{ form.errors}}</p>
+    <p>Your username and password didn't match. Please try again.</p>
+      </div>
+  {% endif %}
+
+  {% if next %}
+      <div class="alert">
+    {% if user.is_authenticated %}
+      <p>Your account doesn't have access to this page. To proceed,
+      please login with an account that has access.</p>
+    {% else %}
+      <p>Please login to see this page.</p>
+    {% endif %}
       </div>
   {% endif %}
 
 
-<div class="container" style="margin-top:50px">
-  <form method="post" action="">
-    {% csrf_token %}
-
-    <table>
-          {% for field in form %}
-      <tr>
-        <td>{{ field.label}}</td>
-        <td>{{ field }}</td>
-      </tr>
-      {% endfor %}
-    </table>
-    <input type="submit" value="{% trans "login" %}">
-  </form>
-
-  {# Assumes you set up the password_reset view in your URLconf #}
-
-</div>
-  <p
-          style="
-          font-size: x-small;
-          position: absolute;
-          bottom: 0;
-          width: 100%;
-          margin: 0;
-          display: flex;
-          justify-content: center;
-
-"><a style="color:black;text-decoration: none" href="{% url 'password_reset' %}">Lost password?</a></p>
 </body>
 </html>
