Finished Signin and register page redesign (for now)

--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -46,7 +46,7 @@
   </form>
 </div>
 <div>
-    <img style="width: 100%;height: 100%" src="{% static "img/register-image.jpg"%}">
+    <img src="{% static "img/register-image.png"%}">
 
 </div>
 </div>
