--- a/static/login_and_register.css
+++ b/static/login_and_register.css
@@ -25,7 +25,7 @@ html,body{
     align-items: center;
     border: 2px solid rgba(0, 0, 0,0.06);
     margin: 100px auto auto;
-    width:50%;
+    width:65%;
     height:50%;
     border-radius: 15px;
     background-color: #fefefe;
@@ -54,7 +54,7 @@ html,body{
     width: 100%;
     height: 100%;
     display: grid;
-    grid-template-columns: 40% 60%;
+    grid-template-columns: 30% 70%;
 }
 
 #forgot-password{
@@ -96,4 +96,9 @@ td{
 .form-two-fields input{
     height: 100% !important;
     width: 100% !important;
+}
+img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
