--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -27,12 +27,12 @@
   
     <input type="submit" value="{% trans "login"%}">
     <input type="hidden" name="next" value="{{ next }}">
-  <a id="forgot-password" href="{% url 'password_reset' %}">{% trans "Lost password?"%}</a>
+  <a id="forgot-password" href="{% url 'password_reset' %}">{% trans "Forgot password?"%}</a>
 
   </form>
 </div>
 <div>
-    <img style="width: 100%;height: 100%" src="{% static "img/login-image.jpg"%}">
+    <img style="width: 100%;height: 100%" src="{% static "img/login-image.png"%}">
 
 </div>
 </div>
