--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,11 @@
 
     <div class="sidebar">
         {% block sidebar %}
-              <a class="{% if request.resolver_match.url_name == "mySubs" %}active{% endif %}" href="{% url 'mySubs' %}">{% trans "My Subs" %}</a>
+              <a class="{% if request.resolver_match.url_name == "mySubs" %}active{% endif %}" href="{% url 'mySubs' %}">
+              <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 60 60" fill="none">
+                  <path opacity="0.75" d="M34.5612 23.4286C34.5612 22.363 34.1258 21.341 33.3508 20.5875C32.5757 19.834 31.5246 19.4107 30.4285 19.4107C29.3325 19.4107 28.2813 19.834 27.5063 20.5875C26.7313 21.341 26.2959 22.363 26.2959 23.4286C26.2959 24.4942 26.7313 25.5161 27.5063 26.2696C28.2813 27.0231 29.3325 27.4464 30.4285 27.4464C31.5246 27.4464 32.5757 27.0231 33.3508 26.2696C34.1258 25.5161 34.5612 24.4942 34.5612 23.4286ZM23.8163 23.4286C23.8163 21.7236 24.5129 20.0885 25.753 18.8829C26.993 17.6773 28.6749 17 30.4285 17C32.1822 17 33.8641 17.6773 35.1041 18.8829C36.3441 20.0885 37.0408 21.7236 37.0408 23.4286C37.0408 25.1335 36.3441 26.7687 35.1041 27.9743C33.8641 29.1798 32.1822 29.8571 30.4285 29.8571C28.6749 29.8571 26.993 29.1798 25.753 27.9743C24.5129 26.7687 23.8163 25.1335 23.8163 23.4286ZM21.4039 40.3036H39.4584C38.9986 37.1244 36.1884 34.6786 32.7945 34.6786H28.0729C24.679 34.6786 21.8688 37.1244 21.409 40.3036H21.4039ZM18.8571 41.2227C18.8571 36.2757 22.9794 32.2679 28.0678 32.2679H32.7893C37.8777 32.2679 42 36.2757 42 41.2227C42 42.0463 41.3129 42.7143 40.4657 42.7143H20.3914C19.5442 42.7143 18.8571 42.0463 18.8571 41.2227Z" fill="#49454F"/>
+              </svg>
+              </a>
               <a class="{% if request.resolver_match.url_name == "reportAbsence" %}active{% endif %}" href="{% url 'reportAbsence' %}">{%  trans "Report Absence" %}</a>
             {% if user.manage_subs or user.is_superuser%}
                 <a class="{% if request.resolver_match.url_name == "sub" %}active{% endif %}" href="{% url 'sub' %}">{%  trans "Set Substitution" %}</a>
