--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -16,9 +16,8 @@
 
 <div id="login-container">
     <div class="register-container">
-  <form id="login-form" method="post" action="{% url 'login' %}">
+  <form id="login-form" method="post" action="{% url 'register' form.instance.uuid %}">
               <h1>{% trans "Register" %}</h1>
-
     {% csrf_token %}
 
     <div class="form-two-fields">{{ form.first_name }}{{ form.last_name }}</div>
