--- a/templates/base.html
+++ b/templates/base.html
@@ -2,14 +2,14 @@
 <!DOCTYPE html>
 <html lang={% trans "en" %} dir="{% trans "ltr" %}">
 <head>
-    <script src="https://kit.fontawesome.com/59481cf4dc.js" crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/htmx.org@2.0.1"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% load static %}
+    <script src="{% static "scripts/htmx.min.js" %}"></script>
+
     <link rel="manifest" href="{% static 'manifest.json' %}">
     <link rel="icon" type="image/x-icon" href="{% static 'favicon.ico' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'sidebar.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'stylesheet.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'styles/sidebar.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'styles/stylesheet.css' %}">
     {% block static %}{% endblock %}
         <meta charset="UTF-8">
         <title>{% block title %}{% endblock %}</title>
@@ -19,46 +19,44 @@
 
     <div class="sidebar">
         {% block sidebar %}
-              <a class="{% if request.resolver_match.url_name == "mySubs" %}active{% endif %}" href="{% url 'mySubs' %}">
+              <a class="{% if request.resolver_match.url_name == "teacher_home" %}active{% endif %}" href="{% url 'teacher_home' %}">
               <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 60 60" fill="none">
                   <path opacity="0.75" d="M34.5612 23.4286C34.5612 22.363 34.1258 21.341 33.3508 20.5875C32.5757 19.834 31.5246 19.4107 30.4285 19.4107C29.3325 19.4107 28.2813 19.834 27.5063 20.5875C26.7313 21.341 26.2959 22.363 26.2959 23.4286C26.2959 24.4942 26.7313 25.5161 27.5063 26.2696C28.2813 27.0231 29.3325 27.4464 30.4285 27.4464C31.5246 27.4464 32.5757 27.0231 33.3508 26.2696C34.1258 25.5161 34.5612 24.4942 34.5612 23.4286ZM23.8163 23.4286C23.8163 21.7236 24.5129 20.0885 25.753 18.8829C26.993 17.6773 28.6749 17 30.4285 17C32.1822 17 33.8641 17.6773 35.1041 18.8829C36.3441 20.0885 37.0408 21.7236 37.0408 23.4286C37.0408 25.1335 36.3441 26.7687 35.1041 27.9743C33.8641 29.1798 32.1822 29.8571 30.4285 29.8571C28.6749 29.8571 26.993 29.1798 25.753 27.9743C24.5129 26.7687 23.8163 25.1335 23.8163 23.4286ZM21.4039 40.3036H39.4584C38.9986 37.1244 36.1884 34.6786 32.7945 34.6786H28.0729C24.679 34.6786 21.8688 37.1244 21.409 40.3036H21.4039ZM18.8571 41.2227C18.8571 36.2757 22.9794 32.2679 28.0678 32.2679H32.7893C37.8777 32.2679 42 36.2757 42 41.2227C42 42.0463 41.3129 42.7143 40.4657 42.7143H20.3914C19.5442 42.7143 18.8571 42.0463 18.8571 41.2227Z" fill="#49454F"></path>
               </svg>
               </a>
             {% if user.manage_subs or user.is_superuser%}
-                <a class="{% if request.resolver_match.url_name == "sub" %}active{% endif %}" href="{% url 'sub' %}">{%  trans "Set Substitution" %}</a>
+                <a class="{% if request.resolver_match.url_name == "sub" %}active{% endif %}" href="{% url 'sub' %}"><svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 60 60" fill="none">
+  <path opacity="0.6" d="M14 28C14 29.1062 14.8937 30 16 30C17.1063 30 18 29.1062 18 28C18 24.6875 20.6875 22 24 22H34V24C34 24.8062 34.4875 25.5375 35.2375 25.85C35.9875 26.1625 36.8438 25.9875 37.4188 25.4187L41.4188 21.4187C42.2 20.6375 42.2 19.3687 41.4188 18.5875L37.4188 14.5875C36.8438 14.0125 35.9875 13.8437 35.2375 14.1562C34.4875 14.4687 34 15.1937 34 16V18H24C18.475 18 14 22.475 14 28ZM46 32C46 30.8937 45.1063 30 44 30C42.8937 30 42 30.8937 42 32C42 35.3125 39.3125 38 36 38H26V36C26 35.1937 25.5125 34.4625 24.7625 34.15C24.0125 33.8375 23.1563 34.0125 22.5813 34.5812L18.5813 38.5812C17.8 39.3625 17.8 40.6312 18.5813 41.4125L22.5813 45.4125C23.1563 45.9875 24.0125 46.1562 24.7625 45.8437C25.5125 45.5312 26 44.8062 26 43.9937V41.9937H36C41.525 41.9937 46 37.5187 46 31.9937V32Z" fill="#49454F"/>
+</svg></a>
             {% endif %}
            
             {% if user.manage_schedule or user.is_superuser %}
-                <a id="setClasses" class="{% if request.resolver_match.url_name == "setClasses" %}active{% endif %}" href="{% url 'setClasses' %}">{%  trans "Set Classes" %}</a>
+                <a id="setClasses" class="{% if request.resolver_match.url_name == "setClasses" %}active{% endif %}" href="{% url 'setClasses' %}"><svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 60 60" fill="none">
+                    <path opacity="0.6" d="M24.8571 15.5C24.8571 14.6687 24.0929 14 23.1429 14C22.1929 14 21.4286 14.6687 21.4286 15.5V18H18.5714C16.05 18 14 19.7938 14 22V23V26V42C14 44.2062 16.05 46 18.5714 46H41.4286C43.95 46 46 44.2062 46 42V26V23V22C46 19.7938 43.95 18 41.4286 18H38.5714V15.5C38.5714 14.6687 37.8071 14 36.8571 14C35.9071 14 35.1429 14.6687 35.1429 15.5V18H24.8571V15.5ZM17.4286 26H23.1429V29.5H17.4286V26ZM17.4286 32.5H23.1429V36.5H17.4286V32.5ZM26.5714 32.5H33.4286V36.5H26.5714V32.5ZM36.8571 32.5H42.5714V36.5H36.8571V32.5ZM42.5714 29.5H36.8571V26H42.5714V29.5ZM42.5714 39.5V42C42.5714 42.55 42.0571 43 41.4286 43H36.8571V39.5H42.5714ZM33.4286 39.5V43H26.5714V39.5H33.4286ZM23.1429 39.5V43H18.5714C17.9429 43 17.4286 42.55 17.4286 42V39.5H23.1429ZM33.4286 29.5H26.5714V26H33.4286V29.5Z" fill                   ="#49454F"/>
+                    </svg>
+                </a>
             {% endif %}
-                <a class="{% if request.resolver_match.url_name == "student_manager" %}active{% endif %}" href="{% url 'student_manager' %}">{%  trans "Manage Students" %}</a>
+                <a class="{% if request.resolver_match.url_name == "student_manager" %}active{% endif %}" href="{% url 'student_manager' %}">
+<svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 60 60" fill="none">
+  <path opacity="0.6" d="M30.5002 16C30.0572 16 29.6197 16.0875 29.2041 16.2562L13.8642 22.5875C13.3447 22.8062 13.0002 23.3687 13.0002 24C13.0002 24.6313 13.3447 25.1938 13.8642 25.4125L17.0306 26.7188C16.1338 28.3312 15.6252 30.2375 15.6252 32.2437V34C15.6252 35.775 15.0345 37.6062 14.4056 39.05C14.0502 39.8625 13.6455 40.6625 13.1752 41.4C13.0002 41.6687 12.951 42.0187 13.0494 42.3375C13.1478 42.6562 13.3775 42.8938 13.6619 42.975L17.1619 43.975C17.3916 44.0438 17.6377 43.9938 17.84 43.85C18.0424 43.7063 18.1845 43.4688 18.2283 43.2C18.6986 40.525 18.4635 38.125 18.1135 36.4062C17.9385 35.5188 17.7033 34.6125 17.3752 33.7812V32.2437C17.3752 30.3562 17.933 28.575 18.901 27.15C19.6064 26.1812 20.5197 25.4 21.5916 24.9187L30.1775 21.0625C30.626 20.8625 31.1345 21.1125 31.3095 21.625C31.4845 22.1375 31.2658 22.7187 30.8174 22.9187L22.2314 26.775C21.5533 27.0812 20.9572 27.55 20.4705 28.125L29.1986 31.725C29.6142 31.8938 30.0517 31.9813 30.4947 31.9813C30.9377 31.9813 31.3752 31.8938 31.7908 31.725L47.1361 25.4125C47.6556 25.2 48.0002 24.6313 48.0002 24C48.0002 23.3687 47.6556 22.8062 47.1361 22.5875L31.7963 16.2562C31.3806 16.0875 30.9431 16 30.5002 16ZM20.0002 39.5C20.0002 41.7062 24.7033 44 30.5002 44C36.297 44 41.0002 41.7062 41.0002 39.5L40.1634 30.4125L32.3869 33.625C31.7799 33.875 31.14 34 30.5002 34C29.8603 34 29.215 33.875 28.6134 33.625L20.8369 30.4125L20.0002 39.5Z" fill="#49454F"/>
+</svg>
+                </a>
            
             {% if user.is_superuser %}
-                <a id="manage-teachers" class="{% if request.resolver_match.url_name == "teacher_manager" %}active{% endif %}" href="{% url 'teacher_manager' %}">{%  trans "Manage Teachers" %}</a>
+                <a id="manage-teachers" class="{% if request.resolver_match.url_name == "teacher_manager" %}active{% endif %}" href="{% url 'teacher_manager' %}"><svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 60 60" fill="none">
+  <path opacity="0.6" d="M20 17.125C20 14.8498 21.7938 13 24 13H46C48.2062 13 50 14.8498 50 17.125V35.6875C50 37.9627 48.2062 39.8125 46 39.8125H31.05C30.3125 38.1689 29.1812 36.751 27.775 35.6875H34V33.625C34 32.4842 34.8937 31.5625 36 31.5625H40C41.1063 31.5625 42 32.4842 42 33.625V35.6875H46V17.125H24V20.2896C22.825 19.5871 21.4562 19.1875 20 19.1875V17.125ZM20 21.25C20.7879 21.25 21.5681 21.41 22.2961 21.721C23.0241 22.0319 23.6855 22.4877 24.2426 23.0623C24.7998 23.6368 25.2417 24.3189 25.5433 25.0696C25.8448 25.8203 26 26.6249 26 27.4375C26 28.2501 25.8448 29.0547 25.5433 29.8054C25.2417 30.5561 24.7998 31.2382 24.2426 31.8127C23.6855 32.3873 23.0241 32.8431 22.2961 33.154C21.5681 33.465 20.7879 33.625 20 33.625C19.2121 33.625 18.4319 33.465 17.7039 33.154C16.9759 32.8431 16.3145 32.3873 15.7574 31.8127C15.2002 31.2382 14.7583 30.5561 14.4567 29.8054C14.1552 29.0547 14 28.2501 14 27.4375C14 26.6249 14.1552 25.8203 14.4567 25.0696C14.7583 24.3189 15.2002 23.6368 15.7574 23.0623C16.3145 22.4877 16.9759 22.0319 17.7039 21.721C18.4319 21.41 19.2121 21.25 20 21.25ZM18.3313 35.6875H21.6625C26.2688 35.6875 30 39.5354 30 44.2791C30 45.2266 29.2562 46 28.3312 46H11.6688C10.7438 46 10 45.233 10 44.2791C10 39.5354 13.7313 35.6875 18.3313 35.6875Z" fill="#49454F"/>
+</svg></a>
             {% endif %}
-<div style="margin-top: auto">
-            {% get_current_language_bidi as LANGUAGE_BIDI %}
-            {% get_current_language as LANGUAGE_CODE %}
-            <form  action="{% url 'set_language' %}" method="post">{% csrf_token %}
-                <input name="next" type="hidden" value="{% url request.resolver_match.url_name %}">
-                <select style="width: 100%" name="language" onchange="this.form.submit()">
-                    {% get_available_languages as LANGUAGES %}
-                    {% get_language_info_list for LANGUAGES as languages %}
-                    {% for language in languages %}
-                        <option value="{{ language.code }}" {%if language.code == LANGUAGE_CODE%}selected{%endif%}>
-                            {{ language.name_local }} ({{ language.code }})
-                        </option>
-                    {% endfor %}
-                </select>
-            </form>
 
 
             <form id='logout' action="{% url 'logout' %}" method="post">
                 {% csrf_token %}
-              <a id="logout" onclick="this.parentNode.submit()">{%  trans "Logout" %}</a>
+              <a onclick="this.parentNode.submit()"><svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 60 60" fill="none">
+  <path opacity="0.6" d="M37.4045 19.2393L44.36 27.6338C44.7678 28.126 45 28.8027 45 29.5C45 30.1973 44.7678 30.874 44.36 31.3662L37.4045 39.7607C37.042 40.1982 36.5549 40.4375 36.0451 40.4375C34.9859 40.4375 34.125 39.3984 34.125 38.1201V33.875H26.875C25.8725 33.875 25.0625 32.8975 25.0625 31.6875V27.3125C25.0625 26.1025 25.8725 25.125 26.875 25.125H34.125V20.8799C34.125 19.6016 34.9859 18.5625 36.0451 18.5625C36.5549 18.5625 37.042 18.8086 37.4045 19.2393ZM25.0625 18.5625H21.4375C20.435 18.5625 19.625 19.54 19.625 20.75V38.25C19.625 39.46 20.435 40.4375 21.4375 40.4375H25.0625C26.065 40.4375 26.875 41.415 26.875 42.625C26.875 43.835 26.065 44.8125 25.0625 44.8125H21.4375C18.4355 44.8125 16 41.873 16 38.25V20.75C16 17.127 18.4355 14.1875 21.4375 14.1875H25.0625C26.065 14.1875 26.875 15.165 26.875 16.375C26.875 17.585 26.065 18.5625 25.0625 18.5625Z" fill="#49454F"/>
+</svg></a>
             </form>
         {% endblock %}
-        </div></div>
+        </div>
     <div class="content">
         {% block content %}
         {% endblock %}
@@ -71,4 +69,26 @@
      });
  }
 </script>
+<div id="lang-div">
+            {% get_current_language_bidi as LANGUAGE_BIDI %}
+            {% get_current_language as LANGUAGE_CODE %}
+<form  action="{% url 'set_language' %}" method="post">{% csrf_token %}
+                <input name="next" type="hidden" value="{% url request.resolver_match.url_name %}">
+                    {% get_available_languages as LANGUAGES %}
+                    {% get_language_info_list for LANGUAGES as languages %}
+                    {% for language in languages %}
+                        {%if language.code != LANGUAGE_CODE%}
+                        <input type="hidden" name="language" value="{{ language.code }}" >
+                        {%endif%}
+                    {% endfor %}
+            <button type="submit" id="lang-select" >
+                            <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 60 60" fill="none">
+              <path opacity="0.6" d="M36 30C36 31.3875 35.925 32.725 35.7938 34H24.2125C24.075 32.725 24.0063 31.3875 24.0063 30C24.0063 28.6125 24.0812 27.275 24.2125 26H35.7938C35.9313 27.275 36 28.6125 36 30ZM37.8 26H45.4937C45.825 27.2812 46 28.6187 46 30C46 31.3813 45.825 32.7188 45.4937 34H37.8C37.9312 32.7125 38 31.375 38 30C38 28.625 37.9312 27.2875 37.8 26ZM44.8375 24H37.5438C36.9188 20.0062 35.6812 16.6625 34.0875 14.525C38.9812 15.8188 42.9625 19.3688 44.8312 24H44.8375ZM35.5187 24H24.4812C24.8625 21.725 25.45 19.7125 26.1687 18.0813C26.825 16.6063 27.5562 15.5375 28.2625 14.8625C28.9625 14.2 29.5437 14 30 14C30.4563 14 31.0375 14.2 31.7375 14.8625C32.4437 15.5375 33.175 16.6063 33.8312 18.0813C34.5562 19.7063 35.1375 21.7188 35.5187 24ZM22.4563 24H15.1625C17.0375 19.3688 21.0125 15.8188 25.9125 14.525C24.3188 16.6625 23.0813 20.0062 22.4563 24ZM14.5063 26H22.2C22.0687 27.2875 22 28.625 22 30C22 31.375 22.0687 32.7125 22.2 34H14.5063C14.175 32.7188 14 31.3813 14 30C14 28.6187 14.175 27.2812 14.5063 26ZM26.1687 41.9125C25.4437 40.2875 24.8625 38.275 24.4812 36H35.5187C35.1375 38.275 34.55 40.2875 33.8312 41.9125C33.175 43.3875 32.4437 44.4563 31.7375 45.1313C31.0375 45.8 30.4563 46 30 46C29.5437 46 28.9625 45.8 28.2625 45.1375C27.5562 44.4625 26.825 43.3938 26.1687 41.9188V41.9125ZM22.4563 36C23.0813 39.9938 24.3188 43.3375 25.9125 45.475C21.0125 44.1813 17.0375 40.6312 15.1625 36H22.4563ZM44.8375 36C42.9625 40.6312 38.9875 44.1813 34.0938 45.475C35.6875 43.3375 36.9187 39.9938 37.55 36H44.8438H44.8375Z" fill="#49454F"/>
+            </svg>
+            </button>
+
+
+            </form>
+
+</div>
 </html>
