--- a/templates/publicBase.html
+++ b/templates/publicBase.html
@@ -8,8 +8,8 @@
     {% load static %}
     {% block static %}{% endblock %}
     <link rel="icon" type="image/x-icon" href="{% static 'favicon.ico' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'stylesheet.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'index.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'styles/stylesheet.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'styles/index.css' %}">
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %}</title>
 </head>
