--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -8,7 +8,7 @@
  {% load static %}
       <link rel="icon" type="image/x-icon" href="{% static 'favicon.ico' %}">
 
-    <link rel="stylesheet" type="text/css" href="{% static 'login_and_register.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'styles/login_and_register.css' %}">
     <meta charset="UTF-8">
     <title>{% trans "Register" %}</title>
 </head>
