--- a/templates/day_schedule.html
+++ b/templates/day_schedule.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <title>{{ day }}</title>
-    <link rel="stylesheet" type="text/css" href="{% static "printable_timetable.css" %}">
+    <link rel="stylesheet" type="text/css" href="{% static "styles/printable_timetable.css" %}">
 </head>
 <body>
 <table>
