--- a/templates/set_schedule.html
+++ b/templates/set_schedule.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/x-icon" href="{% static 'favicon.ico' %}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="{% static 'set_schedule.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'styles/set_schedule.css' %}">
     <title>{% trans "Set Your Schedule" %}</title>
 </head>
 <body>
