--- a/templates/student_manager.html
+++ b/templates/student_manager.html
@@ -2,8 +2,8 @@
 {% load i18n %}
 {% load static %}
 {% block static %}
-    <link rel="stylesheet" href="{%  static 'student_manager.css' %}">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="{%  static 'styles/student_manager.css' %}">
+    <link rel="stylesheet" href="{% static "styles/bootstrap.min.css" %}" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
 {% endblock %}
 {% block title %}{% trans "Manage Students" %}{% endblock %}
