--- a/templates/teacher_home.html
+++ b/templates/teacher_home.html
@@ -48,16 +48,14 @@
                 <h3 class="hour">{{ absence.reason }}</h3>
                 </div>
                 <button style="all:unset; cursor: pointer " hx-target="closest .absence" hx-swap="delete" hx-post="{% url "delete_absence" %}" name="{{ absence.teacher.uuid }}" value="{{ absence.date_str }}" >
-                    <i class="fa-solid fa-trash fa-flip-horizontal fa-2xl" style="color: #002f1a;"></i>
-                </button>
+<svg xmlns="http://www.w3.org/2000/svg" height="32" width="28" viewBox="0 0 448 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path fill="#002f1a" d="M135.2 17.7L128 32 32 32C14.3 32 0 46.3 0 64S14.3 96 32 96l384 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-96 0-7.2-14.3C307.4 6.8 296.3 0 284.2 0L163.8 0c-12.1 0-23.2 6.8-28.6 17.7zM416 128L32 128 53.2 467c1.6 25.3 22.6 45 47.9 45l245.8 0c25.3 0 46.3-19.7 47.9-45L416 128z"/></svg>                </button>
             </div>
         </li>
 
         {% endfor %}
         <li id="add-button-container">
             <button onclick="document.getElementById('myModal').style.display = 'block'" id="add-button">
-                <i class="fa-solid fa-plus fa-2xl" style="color: #002f1a;" > </i>
-            </button>
+<svg xmlns="http://www.w3.org/2000/svg" height="32" width="28" viewBox="0 0 448 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path fill="#002f1a" d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 144L48 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l144 0 0 144c0 17.7 14.3 32 32 32s32-14.3 32-32l0-144 144 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-144 0 0-144z"/></svg>            </button>
             </li>
     </ul>
 </div>
