Tried Optimizing The website, installed Django Debug Toolbar

--- a/templates/student_manager.html
+++ b/templates/student_manager.html
@@ -3,7 +3,7 @@
 {% load static %}
 {% block static %}
     <link rel="stylesheet" href="{%  static 'styles/student_manager.css' %}">
-    <link rel="stylesheet" href="{% static "styles/bootstrap.min.css" %}" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static "styles/bootstrap.min.css" %}">
 
 {% endblock %}
 {% block title %}{% trans "Manage Students" %}{% endblock %}
