--- a/templates/teacher_home.html
+++ b/templates/teacher_home.html
@@ -29,8 +29,8 @@
         <li>
             <div class="substitution">
                 <p class="date">{{ sub.date }}</p>
-                <h2>{{ sub.Class_That_Needs_Sub.name }} - {{ sub.Class_That_Needs_Sub.room }}</h2>
-                <h3 class="hour">{{ sub.Class_That_Needs_Sub.hour }}</h3>
+                <h2>{{ sub.Class_That_Needs_Sub__name }} - {{ sub.Class_That_Needs_Sub__room }}</h2>
+                <h3 class="hour">{{ sub.Class_That_Needs_Sub__hour }}</h3>
             </div>
         </li>
         {% endfor %}
