--- a/templates/teacher_manager.html
+++ b/templates/teacher_manager.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 {% load static %}
 {% block static %}
-    <link rel="stylesheet" href="{% static "styles/bootstrap.min.css" %}" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link type="text/css" rel="stylesheet" href="{% static "styles/bootstrap.min.css" %}">
     <style>
 .teacher-list{
     padding:0;
