--- a/static/styles/stylesheet.css
+++ b/static/styles/stylesheet.css
@@ -162,3 +162,78 @@ i{
 #lang-select:dir(ltr){
     right: 5px;
 }
+.danger-div{
+
+    /*flex-wrap: wrap;*/
+    flex-direction: column;
+    display: flex;
+    gap: 10px;
+    padding: 15px;
+}
+.danger-button{
+    width: 15vw;
+    border: 2px solid #D3D8EF;
+    background-color: #EFD3D8;
+    padding: 25px;
+}
+.danger-button:hover{
+    background-color: #eaa8b4;
+}
+.content *{
+    font-family:Inter,helvetica,sans-serif;
+}
+.danger-field{
+    display: flex;
+    justify-content: space-between;
+
+}
+.danger-field h2{
+    color: darkred;
+    line-height: 3vw;
+    vertical-align: center;
+    margin: 0;
+    font-weight: lighter;
+}
+
+ /* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+    margin:15% auto;
+    padding: 5px;
+    font-family: helvetica, arial, sans-serif;
+    display: block;
+    border: #55AD9B solid 3px;
+    background-color: #F1F8E8;
+    width: 15%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+input[type=submit]:disabled{
+    background-color: grey;
+}
