--- a/static/styles/sidebar.css
+++ b/static/styles/sidebar.css
@@ -81,3 +81,10 @@ div.content {
     text-align: center;
     float: none;
   }}
+
+#danger-zone{
+  background-color: #EFDCD3 !important;
+}
+#danger-zone:hover ,#danger-zone.active{
+  background-color: rosybrown !important;
+}
