--- a/templates/dangerzone.html
+++ b/templates/dangerzone.html
@@ -1,39 +1,36 @@
 {% extends "base.html" %}
 {% load i18n %}
 {% block content %}
-    <h1 style="padding: 15px">Danger Zone</h1>
-    <div id="myModal" class="modal">
+    <h1 style="padding: 15px">{% trans "Danger Zone"%}</h1>
+    <div id="myModal" class="modal" style="display: block ">
 
   <!-- Modal content -->
-  <div class="modal-content">
-    <span onclick="this.parentElement.parentElement.style.display = 'none'" class="close">&times;</span>
+  <div class="modal-content" >
+    <span onclick="this.parentElement.parentElement.style.display = 'none';" class="close">&times;</span>
     <form id="form" method="post">
         {% csrf_token %}
         <input value="" disabled style=" font-size: medium;text-align: center;width: 100%;border: none;background-color: transparent;" id="match">
         <input value="" type="hidden" name="action" id="action">
-        <input value="" style="text-align: center" placeholder="{% trans "Repeat Value Above" %}" onkeyup="checkInput(this)" type="text">
-        <input disabled value="{% trans "Preform Action" %}" id="submit" type="submit">
+        <input id="input" value="" style="text-align: center" placeholder="{% trans "Repeat Value Above" %}" onkeyup="checkInput(this)" type="text">
+        <input id="danger-button" disabled value="{% trans "Perform Action" %}" type="submit">
     </form>
   </div>
 
 </div>
     <div class="danger-div">
-    	<div class="danger-field"><h2>Delete All Schedules</h2><button onclick="showModal('delete-schedules','Delete Schedules')" class="danger-button">Delete All Schedules</button></div>
-        <div class="danger-field"><h2>Increase Grades For All Students</h2><button class="danger-button">Increase Grade For All Students</button></div>
-        <div class="danger-field"><h2>Delete All Tutor - Student Relations</h2><button class="danger-button">Delete All Tutor - Student Relations</button></div>
-        <div class="danger-field"><h2>Delete All Shocher -Student Relations</h2><button class="danger-button">Delete All Shocher - Student Relations</button></div>
+    	<div class="danger-field"><h2>{%trans "Delete All Schedules"%}</h2><button onclick="showModal('delete-schedules','Delete Schedules')" class="danger-button">Delete All Schedules</button></div>
+        <div class="danger-field"><h2> {% trans "Increase Grades For All Students"%}</h2><button onclick="showModal('increase-grades','Increase Grades')" class="danger-button">Increase Grade For All Students</button></div>
+        <div class="danger-field"><h2>{% trans "Delete All Tutor - Student Relations"%}</h2><button onclick="showModal('delete-tutors','Delete Tutors')" class="danger-button">Delete All Tutor - Student Relations</button></div>
+        <div class="danger-field"><h2>{% trans "Delete All Shocher -Student Relations"%}</h2><button class="danger-button" onclick="showModal('delete-shachariot ','Delete Shachariot')">Delete All Shachariot</button></div>
     </div>
 <script>
     const form = document.getElementById("form")
     const action_field = document.getElementById("action")
     const modal = document.getElementById("myModal")
     const match_field = document.getElementById("match")
-
+    modal.style.display = "none";
     function showModal(action,match){
-        Array.from(form.elements).forEach((input) => {
-            if(input.type!=='submit'){
-            input.value = ""}
-        })
+        document.getElementById('input').value = ''
         action_field.value = action;
         match_field.value =match
         modal.style.display = "block";
@@ -41,11 +38,11 @@
     function checkInput(a){
         console.log(a.value)
         console.log(action_field)
-        if (a.value === match_field.value){
-            document.getElementById("submit").disabled = false
+        if(a.value === match_field.value){
+            document.getElementById("danger-button").disabled = false
         }
         else{
-            document.getElementById("submit").disabled = true
+            document.getElementById("danger-button").disabled = true
         }
     }
 
