--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -31,7 +31,7 @@
 
   </form>
 </div>
-<div>
+<div id="img-div">
     <img style="width: 100%;height: 100%" src="{% static "img/login-image.png"%}">
 
 </div>
