--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% load static %}
+<link rel="manifest" href="{% static 'manifest.json' %}">
     <script src="{% static "scripts/htmx.min.js" %}"></script>
     <link rel="icon" type="image/x-icon" href="{% static 'favicon.ico' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'styles/sidebar.css' %}">
@@ -84,4 +85,5 @@
             </form>
 
 </div>
+
 </html>
