Started working on a page to Manage Classes

--- a/templates/dangerzone.html
+++ b/templates/dangerzone.html
@@ -6,7 +6,7 @@
 {% endblock %}
 {% block content %}
     <h1 style="padding: 15px">{% trans "Danger Zone"%}</h1>
-    <div id="myModal" class="modal" style="display: block ">
+    <div id="myModal" class="modal">
 
   <!-- Modal content -->
   <div class="modal-content" >
